Ajustement CSS SideMenu Liste Categories

--- a/ideaBoxFront/src/app/components/navigation/menu-liste-categories/menu-liste-categories.component.css
+++ b/ideaBoxFront/src/app/components/navigation/menu-liste-categories/menu-liste-categories.component.css
@@ -3,7 +3,26 @@ button mat-icon {
     font-size: 24px;
 }
 
+.mat-button:hover {
+
+  background-color:#8f9fff;
+}
+.mat-list-item:hover {
+
+  background-color: lightskyblue;
+}
+
 ::ng-deep .mat-menu-content {
 
     max-height: 500px;
+}
+button.mat-list-item {
+
+  border:none;
+  background-color: white;
+}
+
+.mat-list-item mat-icon {
+
+  margin-right:5px;
 }
