--- a/ideaBoxFront/src/app/components/navigation/menu-liste-categories/menu-liste-categories.component.html
+++ b/ideaBoxFront/src/app/components/navigation/menu-liste-categories/menu-liste-categories.component.html
@@ -1,10 +1,26 @@
-<button mat-button [matMenuTriggerFor]="menu">Categories
-    <mat-icon>list</mat-icon>
-</button>
-<mat-menu #menu="matMenu">
-    <a mat-menu-item *ngFor="let categorie of listeCategories" [routerLink]="['/categorie',categorie._id]"
-        routerLinkActive="router-link-active">
-        <mat-icon>{{categorie._icone}}</mat-icon>
-        {{categorie._categorie}}
-    </a>
-</mat-menu>
+<span *ngIf="position == 'top'"><button mat-button [matMenuTriggerFor]="menu">
+        Categories {{position}}
+        <mat-icon>list</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+        <a mat-menu-item *ngFor="let categorie of listeCategories" [routerLink]="['/categorie',categorie._id]"
+            routerLinkActive="router-link-active">
+            <mat-icon>{{categorie._icone}}</mat-icon>
+            {{categorie._categorie}}
+        </a>
+    </mat-menu>
+</span>
+
+<span *ngIf="position == 'side'">
+    <button mat-list-item [matMenuTriggerFor]="menu">
+        <mat-icon>list</mat-icon>
+        Categories {{position}}
+    </button>
+    <mat-menu #menu="matMenu">
+        <a mat-menu-item *ngFor="let categorie of listeCategories" [routerLink]="['/categorie',categorie._id]"
+            routerLinkActive="router-link-active">
+            <mat-icon>{{categorie._icone}}</mat-icon>
+            {{categorie._categorie}}
+        </a>
+    </mat-menu>
+</span>
