--- a/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
+++ b/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
@@ -29,16 +29,12 @@
           </mat-form-field>
         </div>
       </div>
-      <div class="row">
-        <div class="col ">
-          <ckeditor class="ckeditor-idee" formControlName="_content" [editor]="Editor" (keyup)="onUpdate($event)"
-            [config]="{
-              toolbar: ['heading','|', 'bold', 'italic','link', 'bulletedList', 'numberedList','|',  'blockQuote','MediaEmbed','undo','redo' ],
+
+      <ckeditor class="ckeditor-idee" formControlName="_content" [editor]="Editor" (keyup)="onUpdate($event)" [config]="{
+              toolbar: ['heading','|', 'bold', 'italic','link', 'bulletedList', 'numberedList','|', 'blockQuote','MediaEmbed','undo','redo' ],
              placeholder: 'Taper une description ici ...'
-             
              }"></ckeditor>
-        </div>
-      </div>
+
       <p>Nombre de Caracteres : {{lengthOfContent}}</p>
       <p>Seul les 512 premiers carateres seront affichés dans l'aperçu.</p>
 
