--- a/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
+++ b/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
@@ -7,16 +7,16 @@
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <strong><input matInput placeholder="Titre" formControlName="_titre"></strong>
-            <mat-error *ngIf="creationIdeeForm.controls['_titre'].hasError('required')">
+            <strong><input matInput placeholder="Titre" formControlName="titre"></strong>
+            <mat-error *ngIf="creationIdeeForm.controls['titre'].hasError('required')">
               Le titre est <strong>requis</strong>
             </mat-error>
           </mat-form-field>
         </div>
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Catégorie" formControlName="_categorie">
-            <mat-error *ngIf="creationIdeeForm.controls['_categorie'].hasError('required')">
+            <input matInput placeholder="Catégorie" formControlName="categorie">
+            <mat-error *ngIf="creationIdeeForm.controls['categorie'].hasError('required')">
               La catégorie est <strong>requise</strong>
             </mat-error>
           </mat-form-field>
@@ -31,7 +31,7 @@
       </div>
       <div class="row">
         <div class="col ">
-          <ckeditor class="ckeditor-idee" formControlName="_content" [editor]="Editor" (keyup)="onUpdate($event)"
+          <ckeditor class="ckeditor-idee" formControlName="content" [editor]="Editor" (keyup)="onUpdate($event)"
             [config]="{
               toolbar: ['heading','|', 'bold', 'italic','link', 'bulletedList', 'numberedList','|',  'blockQuote','MediaEmbed','undo','redo' ],
              placeholder: 'Taper une description ici ...'
