--- a/ideaBoxFront/src/app/components/navigation/searchbar/searchbar.component.css
+++ b/ideaBoxFront/src/app/components/navigation/searchbar/searchbar.component.css
@@ -75,3 +75,8 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 
   text-overflow: ellipsis;
 }
+
+.mat-list-item:focus {
+
+  background-color: lightskyblue;
+}
