--- a/ideaBoxFront/src/app/components/idee/idea-full/idea-full.component.html
+++ b/ideaBoxFront/src/app/components/idee/idea-full/idea-full.component.html
@@ -1,8 +1,8 @@
 <mat-card-header>
-    <mat-card-title>{{idee._titre}}</mat-card-title>
-    <mat-card-subtitle class="subtitle-pseudo" [routerLink]="['/profil', idee._originalPosteur._id]"
+    <mat-card-title>{{idee.titre}}</mat-card-title>
+    <mat-card-subtitle class="subtitle-pseudo" [routerLink]="['/profil', idee.originalPosteur._id]"
         routerLinkActive="router-link-active">
-        {{idee._originalPosteur._pseudo}}</mat-card-subtitle>
+        {{idee.originalPosteur._pseudo}}</mat-card-subtitle>
     <div fxFlex>
         <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
             <mat-icon>more_vert</mat-icon>
@@ -11,16 +11,16 @@
             <button mat-menu-item>Expand</button>
             <button mat-menu-item>Masquer</button>
         </mat-menu>
-        <app-pastille-categorie [categorie]="idee._categorie"></app-pastille-categorie>
+        <app-pastille-categorie [categorie]="idee.categorie"></app-pastille-categorie>
 
     </div>
 </mat-card-header>
 <img mat-card-image [src]="idee._image" />
 
 <mat-card-content>
-    <div [innerHtml]="idee._content"></div>
+    <div [innerHtml]="idee.description"></div>
 
 </mat-card-content>
 <mat-card-actions>
-    <app-bar-icons-idee [openComment]='openComment' [score]="idee._score"></app-bar-icons-idee>
+    <app-bar-icons-idee [openComment]='openComment' [score]="idee.score"></app-bar-icons-idee>
 </mat-card-actions>
