Idee From Db (ça marche pour le front)

--- a/ideaBoxFront/src/app/pages/front-page/front-page.component.html
+++ b/ideaBoxFront/src/app/pages/front-page/front-page.component.html
@@ -1,1 +1,1 @@
-<app-idee-list *ngIf="idees !== null" [ideesList]="idees"></app-idee-list>
+<app-idee-list *ngIf="idees.length != 0" [ideesList]="idees"></app-idee-list>
