ouvrir un seul commentaire

--- a/ideaBoxFront/src/app/components/commentaire/commentaire.component.html
+++ b/ideaBoxFront/src/app/components/commentaire/commentaire.component.html
@@ -1,5 +1,4 @@
-<mat-card *ngFor="let comment of commentService._comments" class="commentaire-card">
-
+<mat-card class="commentaire-card">
     <mat-card-header>
         <img mat-card-avatar [src]="comment._membre._profilePic" />
         <h3 class="mat-h3">{{comment._membre._pseudo}}</h3>
