--- a/ideaBoxFront/src/app/pages/page-idea/page-idea.component.html
+++ b/ideaBoxFront/src/app/pages/page-idea/page-idea.component.html
@@ -4,4 +4,4 @@
 
 </mat-card>
 <app-input-commentaire></app-input-commentaire>
-<app-commentaire></app-commentaire>
+<app-liste-commentaires></app-liste-commentaires>
