--- a/ideaBoxFront/src/app/pages/page-idea/page-idea.component.html
+++ b/ideaBoxFront/src/app/pages/page-idea/page-idea.component.html
@@ -1,7 +1,10 @@
-<mat-card>
-    <app-idea-full [idee]='idee'></app-idea-full>
+<section *ngIf="idee !== null">
+
+    <mat-card>
+        <app-idea-full [idee]='idee'></app-idea-full>
 
 
-</mat-card>
-<app-input-commentaire></app-input-commentaire>
-<app-commentaire></app-commentaire>
+    </mat-card>
+    <app-input-commentaire></app-input-commentaire>
+    <app-commentaire></app-commentaire>
+</section>
