pastille collab placé

--- a/ideaBoxFront/src/app/components/collaborateur/collaborateur.component.html
+++ b/ideaBoxFront/src/app/components/collaborateur/collaborateur.component.html
@@ -1,2 +1,3 @@
-
-<button mat-button (click)="openDialog()">{{nombreCollaborateurs}} Collaborateur(s)</button>
+<button mat-icon-button (click)="openDialog()">
+    <mat-icon class="Collab">people_outline</mat-icon> {{nombreCollaborateurs}}
+</button>
