--- a/ideaBoxFront/src/app/components/idee/idea-post/idea-post.component.html
+++ b/ideaBoxFront/src/app/components/idee/idea-post/idea-post.component.html
@@ -3,8 +3,7 @@
         {{idee._titre}}
 
     </mat-card-title>
-    <mat-card-subtitle class="subtitle-pseudo" [routerLink]="['/profil', idee._originalPosteur._id]"
-        routerLinkActive="router-link-active">
+    <mat-card-subtitle class="subtitle-pseudo" [routerLink]="['/profil', idee._originalPosteur._id]" routerLinkActive="router-link-active">
         {{idee._originalPosteur._pseudo}}</mat-card-subtitle>
     <div fxFlex>
         <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
@@ -25,4 +24,6 @@
 <mat-card-actions>
     <app-bar-icons-idee [score]="idee._score" [openComment]='openComment'></app-bar-icons-idee>
     <app-bouton-collaborateur></app-bouton-collaborateur>
+    <app-collaborateur></app-collaborateur>
+
 </mat-card-actions>
