--- a/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
+++ b/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
@@ -40,7 +40,7 @@
              placeholder: 'Taper une description ici ...'
              }"></ckeditor>
 
-      <p>Nombre de Caracteres : {{lengthOfContent}}</p>
+      <p>Nombre de Caracteres : {{lengthOfDescription}}</p>
       <p>Seul les 512 premiers carateres seront affichés dans l'aperçu.</p>
 
     </mat-card-content>
