--- a/ideaBoxFront/src/app/components/collaborateur/collaborateur.component.css
+++ b/ideaBoxFront/src/app/components/collaborateur/collaborateur.component.css
@@ -1,8 +1,9 @@
 .mat-icon-button {
     padding: 0;
-    min-width: 0;
-    width: 50px;
     height: 50px;
+    min-height: 50px;
+    min-width: 80px;
+    max-width: 400px;
     flex-shrink: 0;
     line-height: 40px;
     border-radius: 50%;
