--- a/ideaBoxFront/src/app/pages/page-categorie/page-categorie.component.html
+++ b/ideaBoxFront/src/app/pages/page-categorie/page-categorie.component.html
@@ -7,5 +7,5 @@
             <span class="example-spacer"></span>
         </mat-toolbar-row>
     </mat-toolbar>
-    <app-idee-list [ideesList]="idees"></app-idee-list>
+    <app-idee-list *ngIf="idees.length != 0" [ideesList]="idees"></app-idee-list>
 </div>
