--- a/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.css
+++ b/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.css
@@ -16,6 +16,7 @@ img{
 .mat-dialog-content {
     align-items: stretch;
     max-height: 0%;
+    padding: 0px;
   }
 
   .example-viewport {
@@ -32,20 +33,24 @@ img{
 .item.pseudo{
   color : blue;
 }
-
-mat-dialog-content {
+ 
+.mat-dialog-container {
+  margin-top: 0px;
   display: block;
-  padding: 0px;
+  padding: 0px !important; 
   border-radius: 4px;
   box-sizing: border-box;
-  overflow: auto;
   outline: 0;
   width: 100%;
-  height: 100%;
-  min-height: inherit;
-  max-height: inherit;
-  overflow: hidden;
+  height: 3000px;
+  overflow:scroll;
 }
+
+#ColId {
+  padding: 0px;
+}
+
+
 
 
 
