--- a/ideaBoxFront/src/app/pages/page-membre/page-membre.component.html
+++ b/ideaBoxFront/src/app/pages/page-membre/page-membre.component.html
@@ -27,7 +27,11 @@
         <mat-tab label="Postes">
             <app-idee-list *ngIf="idees.length != 0" [ideesList]="idees"></app-idee-list>
         </mat-tab>
-        <mat-tab label="Commentaires"> <code>Historique commentaires</code> </mat-tab>
+        <mat-tab label="Commentaires">
+            <mat-card *ngFor="let comment of commentairesOfMembre; let i=index" class="commentaire-card">
+                <app-commentaire [comment]="comment"></app-commentaire>
+            </mat-card>
+        </mat-tab>
         <mat-tab label="Likes"> <code>(Perso) Historique idées likées</code> </mat-tab>
         <mat-tab label="Collaborations"> <code>(Perso) Historique en tant que collaborateurs</code> </mat-tab>
     </mat-tab-group>
