--- a/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.html
+++ b/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.html
@@ -1,13 +1,16 @@
-<mat-dialog-content  class="mat-typography">
+<mat-dialog-content class="mat-typography">
     <div>
         <h3 mat-dialog-title>Liste des Collaborateurs</h3>
     </div>
     <cdk-virtual-scroll-viewport itemSize="50" class="example-viewport">
 
 
-        <div *cdkVirtualFor="let item of collaborateurList; templateCacheSize: 0" class="example-item" >
-            <a href="/" class="item.pseudo"> <img [src]="item.img" /> {{item.pseudo}} </a>
-        </div>
+        <mat-card *cdkVirtualFor="let item of membreService.membres; templateCacheSize: 0" class="example-item">
+            <mat-card-header>
+                <img mat-card-avatar [src]="item._profilePic" class="profilPic">
+                <mat-card-subtitle>{{item._pseudo}}</mat-card-subtitle>
+            </mat-card-header>
+        </mat-card>
     </cdk-virtual-scroll-viewport>
 
 
