--- a/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.css
+++ b/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.css
@@ -1,62 +1,48 @@
-h3{
-  text-align : center;
+h3 {
+  text-align: center;
   background: #3f51b5;
   color: #fff;
 }
 
-img{
-    max-width: 20%;
-    max-height: 20%;
-    padding-right : 50px;
-    padding-left : 100px;
-    padding-top: 20px;
+mat-card {
+  max-width: 300px;
+  margin: auto;
 }
 
 
 .mat-dialog-content {
-    align-items: stretch;
-    max-height: 0%;
-    padding: 0px;
-  }
-
-  .example-viewport {
-    height: 500px;
-    width: 400px;
-    border: 1px solid white;
-  }
-
-  a{
-    text-decoration:none;
-    color: black;
-  }
-
-.item.pseudo{
-  color : blue;
+  align-items: stretch;
+  max-height: 0%;
+  padding: 0px;
 }
- 
+
+.example-viewport {
+  height: 500px;
+  width: 400px;
+  border: 1px solid white;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.item.pseudo {
+  color: blue;
+}
+
 .mat-dialog-container {
   margin-top: 0px;
   display: block;
-  padding: 0px !important; 
+  padding: 0px !important;
   border-radius: 4px;
   box-sizing: border-box;
   outline: 0;
   width: 100%;
   height: 3000px;
-  overflow:scroll;
+  overflow: scroll;
 }
 
 #ColId {
   padding: 0px;
 }
-
-
-
-
-
-
-  
-  
-
-  
-
