--- a/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
+++ b/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="creationIdeeForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="card-ajouter-idee">
     <mat-card-header>
-      <mat-card-title>Poster une idee</mat-card-title>
+      <mat-card-title>Poster une idée</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <div class="row">
@@ -41,7 +41,7 @@
              }"></ckeditor>
 
       <p>Nombre de Caracteres : {{lengthOfDescription}}</p>
-      <p>Seul les 512 premiers carateres seront affichés dans l'aperçu.</p>
+      <p>Seul les 512 premiers caratères seront affichés dans l'aperçu.</p>
 
     </mat-card-content>
     <mat-card-actions>
